--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.92",
     "@types/dotenv-safe": "^8.1.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
+    "@types/serverless": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "aws-lambda": "^1.0.7",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -28,6 +31,8 @@
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "serverless": "^3.1.1",
+    "serverless-plugin-typescript": "^2.1.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
