--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/serverless": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "aws-lambda": "^1.0.7",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -39,6 +38,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "dotenv-safe": "^8.2.0"
+    "dotenv-safe": "^8.2.0",
+    "aws-lambda": "^1.0.7"
   }
 }
