--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "author": "Bogdan Pop <bogdan.pop@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon",
-    "start:prod": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/index.js",
-    "build": "tsc -p tsconfig.prod.json",
+    "dev": "serverless offline -s dev",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -31,6 +29,7 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "serverless": "^3.1.1",
+    "serverless-offline": "^8.4.0",
     "serverless-plugin-typescript": "^2.1.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
@@ -38,7 +37,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "dotenv-safe": "^8.2.0",
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "dotenv-safe": "^8.2.0"
   }
 }
