--- a/serverless.yml
+++ b/serverless.yml
@@ -31,6 +31,7 @@ functions:
 # Serverless plugins
 plugins:
   - serverless-plugin-typescript
+  - serverless-offline
 
 # Resources your functions use
 resources:
